# plato

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage-index.html  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/: api.Dockerfile  nginx.conf  web.Dockerfile
